--- a/src/scss/modules/_misc.scss
+++ b/src/scss/modules/_misc.scss
@@ -93,8 +93,8 @@
 
 figure.effect-lily img {
 	max-width: none;
-	width: -webkit-calc(100% + 50px);
-	width: calc(100% + 50px);
+	width: -webkit-calc(100% + 75px);
+	width: calc(100% + 75px);
   // width:100%;
   height: 33.3vh;
 	opacity: 0.7;
@@ -119,6 +119,7 @@ figure.effect-lily figcaption > div {
 
 figure.effect-lily h2,
 figure.effect-lily p {
+  color: #444;
 	-webkit-transform: translate3d(0,40px,0);
 	transform: translate3d(0,40px,0);
 }
@@ -129,7 +130,7 @@ figure.effect-lily h2 {
 }
 
 figure.effect-lily p {
-	color: rgba(255,255,255,0.8);
+	
 	opacity: 0;
 	-webkit-transition: opacity 0.2s, -webkit-transform 0.35s;
 	transition: opacity 0.2s, transform 0.35s;
