--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -20,7 +20,7 @@
   text-align: center;
   background: grey;
   height: 33.3vh;
-  width: 100%;
+  width: 104%;
 }
 
 .skills{
